# isentry

./: CMakeLists.txt  ImageRecorder.cxx  MediaRecorder.cxx  MotionEstimator.cxx  VideoRecorder.cxx  cvplot.cxx  iSentry.cxx  isentry.cfg  isentry2.cfg
motion_shots/: read_me.txt
